--- a/dp.css
+++ b/dp.css
@@ -1,4 +1,3 @@
-
 heading {
     max-width: 750px;
     margin: 4rem auto;
@@ -9,21 +8,6 @@ heading {
     font-family: 'Times New Roman', Times, serif;
     font-size: 30px;
     color: white;
-    
-  }
-   #submit {
-    cursor: pointer;
-    font-size: 30px;
-    background-color: green;
-    color: brown;
-    border-radius: 5px;
-  }
-
-  #Reset {
-    cursor: pointer;
-    font-size: 30px;
-    background-color: aqua;
-    color: brown;
   }
   
   #title {
@@ -35,4 +19,23 @@ heading {
   }
   #main {
     padding: 5% 10%;
+  }
+  input {
+    text-align: center;
+    border: 5px solid rgb(5, 90, 15);
+    
+    border-radius: 5px;
+    color: black;
+    background-color: aqua;
+
+  }
+  #survey-form {
+    background-color: rgba(122, 233, 231, 0.711);
+    border-radius: 10px;
+    padding: 20px 30px;
+  }
+  label {
+    color: black;
+    font-size: 30px;
+    background-color: blue;
   }
